little css bug on support page with content behind popup disappearing

--- a/scss/support.scss
+++ b/scss/support.scss
@@ -360,8 +360,8 @@
 		display: block;
 	}
 
-  .\/serial-log .\#operational-log,
-  .\/remote-diagnostics .\#system-info {
+  .\/serial-log .\#operational-log-view,
+  .\/remote-diagnostics .\#system-info-view {
     display: block;
   }
 }
